adding twitter & github links to website header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,3 +16,12 @@
     {% endif %}
 
 </aside>
+
+<aside class="links">
+    {% if site.github_username %}
+        <a href="https://github.com/{{ site.github_username }}" title="GitHub Profile" target="_blank" class="link"><i class="fab fa-github-alt"></i></a>
+    {% endif %}
+    {% if site.twitter_username %}
+        <a href="https://twitter.com/{{ site.twitter_username }}" title="GitHub Profile" target="_blank" class="link"><i class="fab fa-twitter"></i></a>
+    {% endif %}
+</aside>
