--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,6 @@
         <a href="{{ link | prepend: site.baseurl }}">
             <img src="http://www.gravatar.com/avatar/{{ site.author_gravatar }}.png?s=80" class="gravatar">
         </a>
-        <span class="logo-prompt">{{ prompt }}</span>
     {% endif %}
 
 </aside>
@@ -24,4 +23,5 @@
     {% if site.twitter_username %}
         <a href="https://twitter.com/{{ site.twitter_username }}" title="GitHub Profile" target="_blank" class="link"><i class="fab fa-twitter"></i></a>
     {% endif %}
+    <a href="{{ "/about" | prepend: site.baseurl }}" class="link">About</a>
 </aside>
