--- a/assets/korbeil.css
+++ b/assets/korbeil.css
@@ -16,3 +16,16 @@
 .links a.link:hover {
     border: 3px solid #f14e32;
 }
+
+/* index.md - post list tags */
+section ul li.post-tags {
+    margin: -20px 0 25px 0;
+}
+section ul li.post-tags span {
+    letter-spacing: normal;
+    text-transform: none;
+    border: 1px solid #ddd;
+    padding: 2px 4px;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+}
