--- a/assets/korbeil.css
+++ b/assets/korbeil.css
@@ -25,7 +25,8 @@ section ul li.post-tags span {
     letter-spacing: normal;
     text-transform: none;
     border: 1px solid #ddd;
-    padding: 2px 4px;
+    padding: 1px 4px;
     border-radius: 5px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    font-size: 0.7em;
 }
