adding spotify_user var to config & implementing link in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,9 @@
         <a href="https://github.com/{{ site.github_username }}" title="GitHub Profile" target="_blank" class="link"><i class="fab fa-github-alt"></i></a>
     {% endif %}
     {% if site.twitter_username %}
-        <a href="https://twitter.com/{{ site.twitter_username }}" title="GitHub Profile" target="_blank" class="link"><i class="fab fa-twitter"></i></a>
+        <a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter Profile" target="_blank" class="link"><i class="fab fa-twitter"></i></a>
+    {% endif %}
+    {% if site.spotify_user %}
+        <a href="https://open.spotify.com/user/{{ site.spotify_user }}" title="Spotify Profile" target="_blank" class="link"><i class="fab fa-spotify"></i></a>
     {% endif %}
 </aside>
