--- a/assets/korbeil.css
+++ b/assets/korbeil.css
@@ -1,3 +1,8 @@
+/* _includes/header.html - image:hover overwrite */
+.logo a:hover {
+    background: #ffd89b;
+}
+
 /* _includes/header.html - additional links */
 .links {
     text-align: center;
@@ -14,7 +19,7 @@
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 }
 .links a.link:hover {
-    border: 3px solid #f14e32;
+    border: 3px solid #ffd89b;
 }
 
 /* index.md - post list tags */
