--- a/assets/korbeil.css
+++ b/assets/korbeil.css
@@ -22,6 +22,11 @@
     border: 3px solid #ffd89b;
 }
 
+/* index.md - post list links */
+section ul li a:hover {
+    border-bottom: 1px solid #ffd89b;
+}
+
 /* index.md - post list tags */
 section ul li.post-tags {
     margin: -20px 0 25px 0;
