--- a/assets/korbeil.css
+++ b/assets/korbeil.css
@@ -46,3 +46,8 @@ section ul li.post-tags span {
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
     font-size: 0.7em;
 }
+
+/* posts - spotify iframe */
+iframe.spotify {
+    margin: 0 !important;
+}
