moving title upper

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,10 @@
 
 </aside>
 
+<div class="center">
+    <h1>Baptiste Leduc</h1>
+</div>
+
 <aside class="links">
     <a href="{{ link | prepend: site.baseurl }}" class="link">{{ prompt }}</a>
     {% if site.github_username %}
