--- a/assets/korbeil.css
+++ b/assets/korbeil.css
@@ -1,3 +1,38 @@
+/* index.md - post list links */
+body .center {
+    text-align: center;
+    margin: 0 auto;
+}
+
+/* index.md - post list links */
+section ul li a:hover {
+    border-bottom: 1px solid #ffd89b;
+}
+
+/* index.md - post list tags */
+section ul li.post-tags {
+    margin: -20px 0 25px 0;
+}
+section ul li.post-tags span,
+.links a.link.tag-anchor {
+    letter-spacing: normal;
+    text-transform: none;
+    border: 1px solid #ddd;
+    padding: 1px 4px;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    font-size: 0.7em;
+}
+.links a.link.tag-anchor {
+    border: 2px solid #ddd;
+    /*font-size: inherit;*/
+}
+
+/* posts - spotify iframe */
+iframe.spotify {
+    margin: 0 !important;
+}
+
 /* _includes/header.html - image:hover overwrite */
 .logo a:hover {
     background: #ffd89b;
@@ -21,37 +56,13 @@
 .links a.link:hover {
     border: 3px solid #ffd89b;
 }
+.links a.link.tag-anchor:hover {
+    border: 2px solid #ffd89b;
+}
 .links a.link.tag-anchor {
-    font-size: 0.7em;
-    line-height: 4;
+    font-size: inherit;
+    line-height: 3;
 }
+.links a.link.tag-anchor: {
 
-/* index.md - post list links */
-body .center {
-    text-align: center;
-    margin: 0 auto;
-}
-
-/* index.md - post list links */
-section ul li a:hover {
-    border-bottom: 1px solid #ffd89b;
-}
-
-/* index.md - post list tags */
-section ul li.post-tags {
-    margin: -20px 0 25px 0;
-}
-section ul li.post-tags span {
-    letter-spacing: normal;
-    text-transform: none;
-    border: 1px solid #ddd;
-    padding: 1px 4px;
-    border-radius: 5px;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    font-size: 0.7em;
-}
-
-/* posts - spotify iframe */
-iframe.spotify {
-    margin: 0 !important;
 }
