--- a/assets/korbeil.css
+++ b/assets/korbeil.css
@@ -13,7 +13,7 @@ section ul li a:hover {
 section ul li.post-tags {
     margin: -20px 0 25px 0;
 }
-section ul li.post-tags span,
+section ul li.post-tags a,
 .links a.link.tag-anchor {
     letter-spacing: normal;
     text-transform: none;
@@ -22,6 +22,10 @@ section ul li.post-tags span,
     border-radius: 5px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
     font-size: 0.7em;
+}
+section ul li.post-tags a:hover,
+.links a.link.tag-anchor:hover {
+    border: 1px solid #ffd89b;
 }
 .links a.link.tag-anchor {
     border: 2px solid #ddd;
