--- a/assets/korbeil.css
+++ b/assets/korbeil.css
@@ -56,6 +56,7 @@ iframe.spotify {
     padding: 5px 10px;
     border-radius: 5px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    font-size: 0.7rem;
 }
 .links a.link:hover {
     border: 3px solid #ffd89b;
