--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <aside class="logo">
 
-    {% if page.url == '/index.html' or page.url == '/' %}
-        {% assign link = '/about' %}
-        {% assign prompt = 'About' %}
-    {% else %}
+    {% if page.url == '/about/index.html' or page.url == '/about/' %}
         {% assign link = '/' %}
         {% assign prompt = 'Home' %}
+    {% else %}
+        {% assign link = '/about' %}
+        {% assign prompt = 'About' %}
     {% endif %}
 
     {% if site.author_gravatar %}
@@ -19,10 +19,11 @@
 
 <aside class="links">
     <a href="{{ link | prepend: site.baseurl }}" class="link">{{ prompt }}</a>
+    <a href="{{ "/oss" | prepend: site.baseurl }}" class="link"><i class="fab fa-osi"></i> OSS</a>
     <a href="{{ "/feed.xml" | prepend: site.baseurl }}" class="link"><i class="fas fa-rss"></i></a>
     <a href="{{ "/tags" | prepend: site.baseurl }}" class="link"><i class="fa fa-tag muted"></i></a>
     {% if site.github_username %}
-        <a href="https://github.com/{{ site.github_username }}" title="GitHub Profile" target="_blank" class="link"><i class="fab fa-github-alt"></i></a>
+        <a href="https://github.com/{{ site.github_username }}" title="GitHub Profile" target="_blank" class="link"><i class="fab fa-github"></i></a>
     {% endif %}
     {% if site.twitter_username %}
         <a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter Profile" target="_blank" class="link"><i class="fab fa-twitter"></i></a>
